# lkjai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.inference  Dockerfile.train  Dockerfile.verify  README.md  build.zig  build.zig.zon  compose.yaml  docker-compose.verify.yml  docker-compose.yml  verify.sh
native/: CMakeLists.txt  README.md
native/src/: artifact.cpp  artifact.hpp  cuda_probe.cu  cuda_probe.hpp  cuda_probe_stub.cpp  env.cpp  env.hpp  http_server.cpp  http_server.hpp  inspect_main.cpp  json_min.cpp  json_min.hpp  server_main.cpp  train_main.cpp
training/: README.md  pyproject.toml
training/corpus/kimi-full-v1/: README.md  manifest.json  validation-report.json
training/corpus/kimi-full-v1/holdout/: holdout-000001.jsonl  holdout-000005.jsonl  holdout-000006.jsonl  holdout-000009.jsonl  holdout-000012.jsonl  holdout-000015.jsonl  holdout-000017.jsonl
training/corpus/kimi-full-v1/train/: train-000001.jsonl  train-000004.jsonl  train-000007.jsonl  train-000008.jsonl  train-000011.jsonl  train-000013.jsonl  train-000015.jsonl  train-000017.jsonl  train-000018.jsonl  train-000021.jsonl  train-000024.jsonl  train-000030.jsonl  train-000031.jsonl  train-000032.jsonl  train-000036.jsonl  train-000037.jsonl  train-000038.jsonl  train-000039.jsonl  train-000040.jsonl  train-000045.jsonl  train-000047.jsonl  train-000048.jsonl  train-000049.jsonl  train-000053.jsonl  train-000057.jsonl  train-000060.jsonl  train-000063.jsonl  train-000065.jsonl  train-000067.jsonl  train-000069.jsonl  train-000071.jsonl  train-000074.jsonl  train-000078.jsonl  train-000079.jsonl  train-000085.jsonl  train-000087.jsonl  train-000088.jsonl  train-000090.jsonl  train-000096.jsonl  train-000097.jsonl  (+17 more)
training/corpus/kimi-full-v1/val/: val-000002.jsonl  val-000004.jsonl  (+4 more)
training/corpus/kimi-synthetic-v1/: manifest.jsonl
training/corpus_sources/: README.md  agentic_plan.json  agentic_revision.json  agentic_tools.json  docs_grounding.json  general.json  kjxlkj.json  public.json
training/lkjai_train/: __init__.py  action_index.py  adapter.py  artifacts.py  behavioral.py  checkpoint_files.py  checkpointing.py  cli.py  corpus.py  corpus_agentic.py  corpus_agentic_active.py  corpus_docs.py  corpus_kjxlkj.py  corpus_policy.py  corpus_preferences.py  corpus_shared.py  corpus_source.py  corpus_sourcecode.py  corpus_synthetic.py  dataset.py  docs_data.py  evals.py  export.py  fixed_eval.py  formatting.py  generation.py  inference_server.py  kimi_corpus.py  kimi_corpus_docs.py  kimi_corpus_impl.py  kimi_corpus_public.py  kimi_corpus_recovery.py  kimi_corpus_schema.py  kimi_dataset.py  kjxlkj_data.py  manifest.py  model.py  model_presets.py  objectives.py  packer.py  (+19 more)
training/package/: README.md
training/package/lkjai_train/: behavioral.py  checkpoint_state.py  cli.py  corpus_agentic_active.py  corpus_docs.py  corpus_kjxlkj.py  corpus_policy.py  corpus_safety.py  corpus_source.py  corpus_sourcecode.py  corpus_synthetic.py  dataset.py  evals.py  formatting.py  generation.py  generation_fallback.py  inference_server.py  kimi_corpus.py  kimi_corpus_confirm.py  kimi_corpus_docs.py  kimi_corpus_everyday.py  kimi_corpus_impl.py  kimi_corpus_preference.py  kimi_corpus_schema.py  kimi_dataset.py  kimi_validate_rows.py  manifest.py  packed_data.py  packed_datasets.py  paths.py  pipeline.py  protocol_decode.py  public_data.py  public_pretrain.py  public_pretrain_download.py  public_pretrain_readers.py  repair_corpus.py  rows.py  rows_meta.py  scratch_accounting.py  (+15 more)
training/tests/: test_agentic.py  test_auto_batch.py  test_checkpoint_rotation.py  test_contracts.py  test_fixed_eval.py  test_generation_context.py  test_kimi_corpus.py  test_kimi_corpus_scripts.py  test_objectives.py  test_protocol_decode.py  test_public_pretrain.py  test_resume.py  test_scheduler.py  test_smoke.py  test_tokenizer.py  test_training_accounting.py  test_validation.py
training/tests/fixtures/: fake_kimi.py  fake_kimi_bad.py
(+589 files in other folders)
