[package]
name = "lkjai"
version = "0.1.0"
edition = "2021"
authors = ["lkjai contributors"]
description = "From-scratch small LLM training and local YOLO agent web app"
license = "Apache-2.0"

[[bin]]
name = "lkjai"
path = "src/main.rs"

[dependencies]
axum = "0.8"
candle-core = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
