[package]
name = "lkjai"
version = "0.1.0"
edition = "2021"
authors = ["lkjai contributors"]
description = "Local agentic AI system for RTX 3070 multi-turn tool use"
license = "Apache-2.0"

[[bin]]
name = "lkjai"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
