[project]
name = "lkjai-train"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub==0.30.2",
  "pyarrow==20.0.0",
  "tokenizers==0.21.1",
  "torch==2.11.0",
]

[project.optional-dependencies]
cuda = [
  "flash-attn==2.8.3",
]

[tool.pytest.ini_options]
pythonpath = ["package"]
testpaths = ["training/tests"]
markers = [
  "slow: optional scratch training smoke tests",
]
